# ReAD

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-eval.txt  requirements.txt
.github/workflows/: mirror-to-labrai.yml  sync-from-source.yml
configs/: distill_prompt_sources.yaml  eval_config.json  exp.yml  read.yml  task_cards.yaml
data/distill_prompts/: README.md
data/distill_prompts/code/: templates.jsonl
data/distill_prompts/general_knowledge/: templates.jsonl
data/distill_prompts/long_context/: templates.jsonl
data/distill_prompts/math/: templates.jsonl
data/distill_prompts/multilingual/: templates.jsonl
data/distill_prompts/reasoning/: templates.jsonl
data/distill_prompts/steerability/: templates.jsonl
data/distill_prompts/tool_use/: templates.jsonl
examples/: __init__.py  toy_read_demo.py
read/: __init__.py  allocation.py  bandit.py  eval_utils.py  generation.py  probe_suite.py  requirements.py  task_cards.py  template_library.py  training_utils.py  utils.py
scripts/: build_eval_hashes.py  read_build_probes.py  read_collect_gphi.py  read_generate_batch.py  read_train.py  train_requirement_identifier.py
tests/: test_allocation.py  test_template_library.py  test_toy_demo.py
